--- a/pokedex.css
+++ b/pokedex.css
@@ -279,9 +279,9 @@
   
   .right-container {
     background: #a20a0f;
-    height: calc(100% - 50px);
+    height: calc(100% - 70px);
     padding: 25px;
-    width: calc(50% - 50px);
+    width: calc(50% - 5 0px);
   }
   
   .right-container__black {
@@ -329,8 +329,7 @@
     margin-top: 25px;
   }
   
-  .left-button,
-  .right-button {
+  .botonBuscar {
     align-items: center;
     background: #DEDEDE;
     border-radius: 3px;
@@ -342,16 +341,14 @@
     height: 30px;
     justify-content: center;
     text-transform: uppercase;
-    width: 100px;
+    width: 150px;
   }
   
-  .left-button:hover,
-  .right-button:hover {
+  .botonBuscar:hover {
     background: white;
   }
   
-  .left-button:active,
-  .right-button:active {
+  .botonBuscar {
     box-shadow: inset 0 0 2px 2px rgba(0,0,0,.3);
   }
   
